# Ray_tracer

./: CMakeLists.txt
src/: camera.h  color.c  color.h  hittable.h  hittable_list.h  interval.h  main.c  main.cpp  ray.h  sphere.h  utils.h  vec3.c  vec3.h
